--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Task7</title>
+  <title>New Movie</title>
 </head>
 
 <body>
